# Scraper

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  channels.yaml.example  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
app/: index.html  main.py
app/adapters/: base.py  boss.py  discord.py  registry.py  telegram.py
app/api/routes/: channels.py  config.py  save.py  search.py  telegram_auth.py  telegram_ops.py
app/core/: channel_config.py  config.py  models.py  telegram_client.py
app/db/: connection.py  schema.py
docs/: azure-aci-deploy.md
